--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "firebase-admin": "^13.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.2"
+    "@types/express": "^5.0.2",
+    "eslint": "^9.27.0",
+    "globals": "^16.1.0",
+    "prettier": "3.5.3",
+    "typescript-eslint": "^8.32.1"
   }
 }
