--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src --exec ts-node index.ts"
+    "dev": "nodemon --watch src --exec ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
